--- a/public/custom/decrypt.html
+++ b/public/custom/decrypt.html
@@ -159,6 +159,7 @@
           durationLoading: 500,
           duration: 5000
         })
+        break
       case 'host':
         $('#text').text(`Nový HOST - dešifrování`)
         locale = 'Diváků'
