decrypt update color

--- a/public/custom/decrypt.html
+++ b/public/custom/decrypt.html
@@ -39,14 +39,14 @@
 
       .cursor {
         font-weight: bold;
-        color: lightcoral;
+        color: #99FF00;
         animation: fadeAnimation 1s infinite;
       }
     </style>
   </head>
   <body>
     <div class="alert" style="text-align: center;">
-      <div style="display: inline-block; border-bottom: 1px dotted lightcoral">
+      <div style="display: inline-block; border-bottom: 1px dotted #99FF00">
         <strong id="text"></strong>
       </div>
       <span id="done" style="visibility: hidden" class="cursor">hotovo</span>
@@ -54,7 +54,7 @@
       <div style="display: inline-block; text-align:center; margin: auto; text-transform: uppercase; font-size: 60px;">
         <strong id="username"></strong><span class="cursor">|</span>
         <br>
-        <div style="text-align:right; margin: auto; text-transform: uppercase; font-size: 40px; float: right; padding-right: 1vw; color: lightcoral">
+        <div style="text-align:right; margin: auto; text-transform: uppercase; font-size: 40px; float: right; padding-right: 1vw; color: #99FF00">
           <span id="amount"></span>
         </div>
       </div>
