ui: fix loading of header translations
Fixes #1543

--- a/public/pages/registry/textOverlay/list.html
+++ b/public/pages/registry/textOverlay/list.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <span data-lang="menu.textoverlay" class="title text-default"></span>
+        <span class="title text-default">{{ commons.translate('menu.textoverlay') }}</span>
 
         <div class="pt-3 pb-3 mt-3 mb-3 m-0 border-top border-bottom row">
           <div class="col-sm-6">
