widgets: chat should be dark if dark theme is used

--- a/public/popout.html
+++ b/public/popout.html
@@ -62,10 +62,11 @@
     });
 
     var translations = {}
-
+    var configuration = {}
 
     socket.emit('getConfiguration')
     socket.on('configuration', function (data) {
+      configuration = data
       moment.locale(data.lang) // set moment locale
       /* THEME */
       if (data.theme === 'dark') {
