--- a/public/pages/registry/gallery/list.html
+++ b/public/pages/registry/gallery/list.html
@@ -122,7 +122,7 @@
         }
       },
       created: function () {
-        this.socket.emit('find', {}, (err, items) => {
+        this.socket.emit('find', { omit: ['data'] }, (err, items) => {
           this.items = items
           this.isLoading = false
         })
